syntax = "proto3";

//option java_multiple_files = true;
//option java_package = "io.grpc.examples.hellogrpc";
//option java_outer_classname = "RouteGuideProto";

package hellogrpc;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest{
    string name = 1;
}

message HelloReply{
    string message = 1;
}

